@@ -1,5 +1,8 @@
 Release Notes
 
+* 5/26/2017
+  * fixed killJob with keepUnmerged not to discard evens
+
 * 5/23/2017
   * changed retryJob to reset computingSite to ES merge jobs
 
